[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["graphs", "examples"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"